exception handler for controllers. return response entities instead of lists